--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource-variable/onest": "^5.1.1",
     "@tailwindcss/vite": "^4.0.3",
     "astro": "^5.2.3",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "tippy.js": "^6.3.7"
   }
 }
