--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.3",
+    "@astrojs/react": "^4.2.0",
     "@fontsource-variable/onest": "^5.1.1",
     "@tailwindcss/vite": "^4.0.3",
+    "@types/alpinejs": "^3.13.11",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "alpinejs": "^3.14.8",
     "astro": "^5.2.3",
-    "tailwindcss": "^4.0.3",
-    "tippy.js": "^6.3.7"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.3"
   }
 }
