--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.3",
+    "@astrojs/netlify": "^6.2.0",
     "@astrojs/react": "^4.2.0",
     "@fontsource-variable/onest": "^5.1.1",
     "@tailwindcss/vite": "^4.0.3",
